<resources>
    <string name="app_name">Lesson2</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_new_activity">Start new Activity!</string>
    <string name="button">Open Mirea</string>
    <string name="share">Share</string>
    <string name="send_notify">Send Notify</string>
    <string name="open_notification_app">Open notification app</string>
    <string name="show_dialog">Show dialog</string>
    <string name="progress_choice">Progress Choice</string>
    <string name="date_choice">Date Choice</string>
    <string name="time_choice">Time Choice</string>
</resources>